Halfway point check-in! lots of stuff about utlity classes and building your own framework a la tailwind or bootstrap.  Note grid is mixed with flexbox

--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ img {
   max-width: 100%;
 }
 
+section a {
+  color: #fff;
+}
 /* navbar */
 .navbar {
   width: 100%;
@@ -79,6 +82,43 @@ img {
   margin-right: 10px;
 }
 
+.navbar-nav-right li:nth-child(2) {
+  margin: 0 5px;
+}
+
+/* box */
+.box {
+  margin-bottom: 30px;
+}
+
+.box-inner {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.box-text {
+  max-width: 500px;
+  text-align: center;
+  justify-self: center;
+  padding: 20px 0;
+}
+
+.box-text .btn {
+  margin-top: 20px;
+}
+/* Grid styles */
+.grid-col-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.grid-reversed :first-child {
+  order: 2;
+}
+
 /* buttons */
 
 .btn {
@@ -91,4 +131,113 @@ img {
   line-height: 1.2;
   text-align: center;
   text-decoration: none;
+}
+
+.btn-dark-outline {
+  border-color: black;
+  color: #000;
+}
+
+.btn-light-outline {
+  border-color: #fff;
+  color: #000;
+}
+
+.btn-dark-outline:hover,
+.btn-light-outline:hover {
+  background-color: rgba(0, 0, 0, 0.06);
+}
+
+.btn-dark {
+  background-color: #000;
+  color: #fff;
+}
+
+.btn-dark:hover {
+  background-color: #333;
+}
+
+/* Background */
+.bg-primary {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.bg-secondary {
+  background-color: var(--color-secondary);
+  color: #fff;
+}
+
+.bg-extra {
+  background-color: var(--color-extra);
+  color: #000;
+}
+
+.bg-dark {
+  background-color: var(--color-dark);
+  color: #000;
+}
+
+/* text styling */
+.text-center {
+  text-align: center;
+}
+
+.text-xl {
+  font-size: 50px;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.text-lg {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.text-md {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.text-sm {
+  font-size: 19px;
+  margin-bottom: 20px;
+}
+
+/* padding */
+.py-sm {
+  padding: 10px 0;
+}
+
+.py-md {
+  padding: 20px 0;
+}
+
+.py-lg {
+  padding: 40px 0;
+}
+
+@media (max-width: 960px) {
+  .test-xl {
+    font-size: 30px;
+  }
+
+  .text-lg {
+    font-size: 25px;
+  }
+
+  .text-md {
+    font-size: 19px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .box {
+    max-width: 1440px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
